# broker-cockpit

./: .env.example  .gitignore  CLAUDE.md  TODO.md  compose.prod.yml  compose.yml
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: baskets.py  baskets_api.py  config.py  features.py  features_api.py  heartbeat.py  ibkr.py  ibkr_sync.py  internal_auth.py  journal_api.py  main.py  models.py  notify.py  performance.py  plan_monitor.py  plans.py  plans_api.py  portfolio_api.py  rh_refresh.py  robinhood.py  scheduler.py  snapshots.py  value_history.py
apps/worker/migrations/: env.py
apps/worker/migrations/versions/: 3f8ad2283ded_baskets.py  4acd099108bf_rh_sync_columns.py  6cbb9d9b5f0d_journal_entries.py  a7c1e90d2b14_underlying_tags.py  acf93a59427d_schema_v1.py  b9e2d4a71c05_basket_plan_legs.py  c3d5e7f90a12_snapshot_source.py  f1e2d3c4b5a6_features.py
apps/worker/scripts/: backfill_snapshots.py  rh_login.py  seed_demo.py  seed_tags.py
apps/worker/tests/: conftest.py  test_backfill.py  test_baskets.py  test_exposure.py  test_features.py  test_health.py  test_heartbeat.py  test_ibkr_sync.py  test_internal_auth.py  test_journal.py  test_notify.py  test_performance.py  test_performance_api.py  test_plan_monitor.py  test_plans.py  test_portfolio_api.py  test_rh_normalize.py  test_rh_refresh.py  test_scheduler.py  test_schema.py  test_snapshots.py  test_tags.py  test_value_history.py
apps/worker/tests/fixtures/: rh_option_positions.json  rh_stock_positions.json
docs/: DEPLOY.md  RESTORE.md
scripts/: backup_secrets.sh  feature_runner.sh  import_basket.py  (+4 more)
(+95 files in other folders)
